# genesisengine

./: CMakeLists.txt  CONTINUACAO.md
cmake/: GenesisReflection.cmake
demo/: main.cpp
docs/: MASTER_PLAN.md
engine/core/: CMakeLists.txt
engine/core/include/genesis/core/: Assert.hpp  Core.hpp  Log.hpp  Platform.hpp  Version.hpp
engine/core/include/genesis/core/jobs/: JobCounter.hpp  JobSystem.hpp
engine/core/include/genesis/core/math/: Mat4.hpp  Vec.hpp
engine/core/include/genesis/core/memory/: Allocator.hpp  LinearAllocator.hpp  PoolAllocator.hpp
engine/core/include/genesis/core/reflection/: ReflectMacros.hpp  TypeInfo.hpp  TypeInfo.inl  TypeRegistry.hpp
engine/core/include/genesis/core/serialization/: JsonSerializer.hpp  ReflectionSerializer.hpp  Serializer.hpp
engine/core/src/: Version.cpp
engine/core/src/jobs/: JobSystem.cpp
engine/core/src/reflection/: TypeRegistry.cpp
engine/core/src/serialization/: JsonSerializer.cpp  ReflectionSerializer.cpp
tests/core/: CMakeLists.txt  test_jobs.cpp  test_math.cpp  test_memory.cpp  test_reflection.cpp  test_serialization.cpp
tests/core/fixtures/: ReflectedTransform.hpp
tools/reflect/: README.md  genesis_reflect.py  requirements.txt
